# MediaPlay

./: .gitignore  MediaPlay.7z  possibleSources
MediaPlay/: CMakeLists.txt  README.md  flake.nix
MediaPlay/extractors/: BaseExtractor.h  ExtractorRegistry.cpp  ExtractorRegistry.h  HentaiCityExtractor.cpp  HentaiCityExtractor.h
MediaPlay/providers/: BaseProvider.h  HentaiCityProvider.cpp  HentaiCityProvider.h  ProviderRegistry.cpp  ProviderRegistry.h
MediaPlay/qml/: Main.qml  MetaField.qml  MetaStat.qml  NavItem.qml  PlayerControls.qml  SettingSlider.qml  SettingToggle.qml  SettingsPage.qml  SettingsSection.qml  SettingsStore.qml  SideBar.qml  SourceRow.qml  SourcesPage.qml  StatChip.qml  TopBar.qml  VideoCard.qml  VideoPlayer.qml  VideosPage.qml
MediaPlay/resources/: settings.json
MediaPlay/resources/sample/: all_videos.json
MediaPlay/src/: ExtractionManager.cpp  ExtractionManager.h  JsonLoader.cpp  JsonLoader.h  SettingsManager.cpp  SettingsManager.h  VideoItem.cpp  VideoItem.h  VideoModel.cpp  VideoModel.h  main.cpp
